Update style and RGB values of process progress bar

--- a/Kitodo/src/main/webapp/WEB-INF/resources/css/pattern-library.css
+++ b/Kitodo/src/main/webapp/WEB-INF/resources/css/pattern-library.css
@@ -24,8 +24,8 @@
     --error-background: #f2dede;
 
     --progress-closed: #42ba37;
-    --progress-open: #f4ffa1;
-    --progress-inwork: #c1d800;
+    --progress-inwork: #c3d300;
+    --progress-open: #ee7e5b;
     --progress-blocked: #f94a15;
 
     --input-height: 36px;
