Replace default dialogs with kitodo dialogs on batch page

--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/processes/batchList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/processes/batchList.xhtml
@@ -17,8 +17,6 @@
         xmlns:h="http://xmlns.jcp.org/jsf/html"
         xmlns:p="http://primefaces.org/ui">
 
-    <h:outputScript library="js" name="batch.js" target="body"/>
-
     <h:form id="batchForm">
         <p:panelGrid id="detailForm" columns="2" cellpadding="10" layout="grid">
             <p:row>
@@ -121,16 +119,15 @@
                         <h:outputText><i class="fa fa-times-circle-o"/> #{msgs.removeFromAssociatedBatch}</h:outputText>
                     </h:commandLink>
 
-                    <h:inputHidden value="#{BatchForm.batchName}" id="batchName"/>
-                    <h:commandLink action="#{BatchForm.renameBatch}"
-                                   onclick="if(!renameBox('#{msgs.enterBatchName}', '#{msgs.noBatchSelected}', '#{msgs.tooManyBatchesSelected}'))return false">
+                    <p:commandLink id="renameBatch" title="#{msgs.renameBatch}"
+                                   oncomplete="PF('renameBatchDialog').show()" update="@(.editDialog)">
                         <h:outputText><i class="fa fa-pencil-square-o fa-lg"/> #{msgs.renameBatch}</h:outputText>
-                    </h:commandLink>
+                    </p:commandLink>
 
-                    <h:commandLink action="#{BatchForm.createNewBatch}"
-                                   onclick="if(!newNameBox('#{msgs.enterBatchName}', '#{msgs.noProcessSelected}'))return false">
+                    <p:commandLink id="createBatch" title="#{msgs.createNewBatchFromSelectedProcesses}"
+                                   oncomplete="PF('createBatchDialog').show()" update="@(.editDialog)">
                         <h:outputText><i class="fa fa-plus"/> #{msgs.createNewBatchFromSelectedProcesses}</h:outputText>
-                    </h:commandLink>
+                    </p:commandLink>
                 </h:panelGrid>
             </p:row>
         </p:panelGrid>
