--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/projectEdit/projectEditDetail.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/projectEdit/projectEditDetail.xhtml
@@ -17,39 +17,39 @@
     xmlns:p="http://primefaces.org/ui">
 
     <p:panel>
-        <p:selectBooleanButton
-                onLabel="#{msgs.locked}"
-                offLabel="#{msgs.unlocked}"
-                onIcon="fa fa-lock fa-lg"
-                offIcon="fa fa-unlock fa-lg"
+        <p:commandButton
+                value="#{msgs.unlocked}"
+                icon="fa fa-unlock fa-lg"
+                iconPos="right"
                 styleClass="callto"
                 id="detailLockedButton"
-                value="#{ProjectForm.lockedDetail}">
-            <p:ajax event="change" update="editDetailForm"/>
-        </p:selectBooleanButton>
+                onclick="enableOrDisable(this,'#{msgs.locked}','#{msgs.unlocked}')">
+        </p:commandButton>
     </p:panel>
-    <p:panelGrid id="editDetailForm" columns="2" cellpadding="10" layout="grid">
+    <p:panelGrid columns="2" cellpadding="10" layout="grid">
         <p:row>
             <div>
                 <p:outputLabel for="title" value="#{msgs.title}" />
-                <p:inputText id="title" placeholder="#{msgs.title}" class="input" value="#{ProjectForm.myProjekt.title}" disabled="#{ProjectForm.lockedDetail}" required="#{empty param['editForm:saveButtonToggler']}"/>
+                <p:inputText id="title" placeholder="#{msgs.title}" class="input"
+                             value="#{ProjectForm.myProjekt.title}"
+                             required="#{empty param['editForm:saveButtonToggler']}"/>
             </div>
             <div>
                 <p:outputLabel for="pages" value="#{msgs.numberImages}" />
-                <p:inputText id="pages" placeholder="10" class="input" value="#{ProjectForm.myProjekt.numberOfPages}" disabled="#{ProjectForm.lockedDetail}">
+                <p:inputText id="pages" placeholder="10" class="input" value="#{ProjectForm.myProjekt.numberOfPages}">
                     <p:ajax event="blur"/>
                 </p:inputText>
             </div>
             <div>
                 <p:outputLabel for="band" value="#{msgs.numberVolumes}" />
-                <p:inputText id="band" placeholder="1" class="input" value="#{ProjectForm.myProjekt.numberOfVolumes}" disabled="#{ProjectForm.lockedDetail}">
+                <p:inputText id="band" placeholder="1" class="input" value="#{ProjectForm.myProjekt.numberOfVolumes}">
                     <p:ajax event="blur"/>
                 </p:inputText>
             </div>
             <div>
                 <p:outputLabel for="client" value="#{msgs.client}"/>
                 <p:selectOneMenu id="client" converter="#{clientConverter}" value="#{ProjectForm.myProjekt.client}"
-                                 disabled="#{ProjectForm.lockedDetail}" required="#{not empty param['editForm:save']}">
+                                 required="#{not empty param['editForm:save']}">
                     <f:selectItems value="#{ProjectForm.clients}"/>
                     <p:ajax event="change" oncomplete="toggleSave()"/>
                 </p:selectOneMenu>
@@ -58,23 +58,25 @@
         <p:row>
             <div>
                 <p:outputLabel for="startdate" value="#{msgs.startDate}" />
-                <p:calendar id="startdate" styleClass="input-with-button" value="#{ProjectForm.myProjekt.startDate}" showOn="button" disabled="#{ProjectForm.lockedDetail}">
+                <p:calendar id="startdate" styleClass="input-with-button" value="#{ProjectForm.myProjekt.startDate}"
+                            showOn="button">
                     <p:ajax event="dateSelect" oncomplete="toggleSave()"/>
                     <p:ajax event="blur" oncomplete="toggleSave()"/>
                 </p:calendar>
             </div>
             <div>
                 <p:outputLabel for="enddate" value="#{msgs.endDate}" />
-                <p:calendar id="enddate" styleClass="input-with-button" value="#{ProjectForm.myProjekt.endDate}" showOn="button" disabled="#{ProjectForm.lockedDetail}">
+                <p:calendar id="enddate" styleClass="input-with-button" value="#{ProjectForm.myProjekt.endDate}"
+                            showOn="button">
                     <p:ajax event="dateSelect" oncomplete="toggleSave()"/>
                     <p:ajax event="blur" oncomplete="toggleSave()"/>
                 </p:calendar>
             </div>
             <div>
                <p:outputLabel for="projectIsActive" value="#{msgs.projectIsActive}" />
-               <p:selectBooleanCheckbox id="projectIsActive" class="input" value="#{ProjectForm.myProjekt.active}" disabled="#{ProjectForm.lockedDetail}">
-                   <p:ajax event="change" oncomplete="toggleSave()" />
-               </p:selectBooleanCheckbox>
+                <p:selectBooleanCheckbox id="projectIsActive" class="input" value="#{ProjectForm.myProjekt.active}">
+                    <p:ajax event="change" oncomplete="toggleSave()"/>
+                </p:selectBooleanCheckbox>
             </div>
 
             <ui:fragment rendered="#{ProjectForm.copyTemplates}">
