Add save of the duplicated files

--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/projects/workflowList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/projects/workflowList.xhtml
@@ -49,8 +49,9 @@
                         <f:param name="id" value="#{item.id}"/>
                     </h:link>
 
-                    <h:commandLink action="#{WorkflowForm.duplicate(item.id)}" immediate="true"
-                                   title="#{msgs.duplicateWorkflow}"><i class="fa fa-clone fa-lg"/></h:commandLink>
+                    <h:commandLink action="#{WorkflowForm.duplicate(item.id)}" title="#{msgs.duplicateWorkflow}">
+                        <i class="fa fa-clone fa-lg"/>
+                    </h:commandLink>
 
                     <p:commandLink id="deleteWorkflow" action="#{WorkflowForm.delete}"
                                    title="#{msgs.delete}" update="projectsTabView:workflowTable">
