--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/workflowEdit/workflowEditDetails.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/workflowEdit/workflowEditDetails.xhtml
@@ -32,7 +32,7 @@
             <div>
                 <p:commandButton id="btnReadXmlDiagram" value="Read XML diagram"
                                  action="#{WorkflowForm.readXMLDiagram}"
-                                 rendered="#{WorkflowForm.workflow.id ne null}"
+                                 rendered="#{WorkflowForm.workflow.fileName ne null}"
                                  immediate="true"/>
             </div>
 
