--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/processes/batchList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/processes/batchList.xhtml
@@ -42,7 +42,7 @@
                 </div>
 
                 <h:panelGrid columns="1" cellpadding="2px">
-                    <h:commandLink action="#{BatchForm.exportBatch}">
+                    <h:commandLink action="#{BatchForm.export}">
                         <h:outputText><i class="fa fa-file"/> #{msgs.exportBatch}</h:outputText>
                     </h:commandLink>
 
@@ -80,7 +80,7 @@
                         <i class="fa fa-pencil-square-o fa-lg"/> <h:outputText value="#{msgs.propertyEdit}"/>
                     </h:link>
 
-                    <h:commandLink action="#{BatchForm.deleteBatch}">
+                    <h:commandLink action="#{BatchForm.delete}">
                         <h:outputText><i class="fa fa-trash-o"/> #{msgs.deleteBatch}</h:outputText>
                     </h:commandLink>
                 </h:panelGrid>
