--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/processes/batchRenamePopup.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/processes/batchRenamePopup.xhtml
@@ -33,7 +33,7 @@
                     <p:commandButton value="#{msgs.cancel}" immediate="true" icon="fa fa-times fa-lg" iconPos="right"
                                      styleClass="secondary" onclick="PF('renameBatchDialog').hide();">
                     </p:commandButton>
-                    <p:commandButton action="#{BatchForm.renameBatch}" id="save" update="processesTabView:batchForm"
+                    <p:commandButton action="#{BatchForm.rename}" id="save" update="processesTabView:batchForm"
                                      oncomplete="PF('renameBatchDialog').hide();" value="#{msgs.apply}"
                                      styleClass="right">
                     </p:commandButton>
