Unify naming in ClientForm

--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/users/clientList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/users/clientList.xhtml
@@ -33,7 +33,7 @@
                     <i class="fa fa-pencil-square-o fa-lg"/>
                 </h:link>
                 <p:commandLink id="deleteClient"
-                               action="#{ClientForm.deleteClient}"
+                               action="#{ClientForm.delete}"
                                title="#{msgs.delete}"
                                update="usersTabView:clientsTable">
                     <h:outputText><i class="fa fa-trash-o"/></h:outputText>
