Unify naming in DocketForm

--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/projects/docketList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/projects/docketList.xhtml
@@ -43,7 +43,7 @@
                     <i class="fa fa-pencil-square-o fa-lg"/>
                 </h:link>
                 <p:commandLink id="deleteDocket"
-                               action="#{DocketForm.deleteDocket}"
+                               action="#{DocketForm.delete}"
                                title="#{msgs.delete}"
                                update="projectsTabView:docketTable">
                     <h:outputText><i class="fa fa-trash-o"/></h:outputText>
