--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/users/ldapgroupList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/users/ldapgroupList.xhtml
@@ -37,12 +37,11 @@
                 </h:link>
                 <h:commandLink action="#{LdapGroupForm.duplicateLdapGroup(item.id)}" immediate="true"
                                title="#{msgs.duplicateLdapGroup}"><i class="fa fa-clone fa-lg"/></h:commandLink>
-                <p:commandLink id="deleteLdapgroup" action="#{LdapGroupForm.deleteLdapGroup}" title="#{msgs.delete}"
+                <p:commandLink id="deleteLdapgroup" action="#{LdapGroupForm.delete}" title="#{msgs.delete}"
                                update="usersTabView:ldapGroupsTable">
                     <h:outputText><i class="fa fa-trash-o"/></h:outputText>
                     <f:setPropertyActionListener value="#{item.id}" target="#{LdapGroupForm.ldapGroupById}"/>
-                    <p:confirm header="#{msgs.confirmDelete}"
-                               message="#{msgs.confirmDeleteLdapgroup}"
+                    <p:confirm header="#{msgs.confirmDelete}" message="#{msgs.confirmDeleteLdapgroup}"
                                icon="ui-icon-alert"/>
                 </p:commandLink>
             </h:form>
