Unify naming in RulesetForm

--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/projects/rulesetList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/projects/rulesetList.xhtml
@@ -51,7 +51,7 @@
                     <i class="fa fa-pencil-square-o fa-lg"/>
                 </h:link>
                 <p:commandLink id="deleteRuleset"
-                               action="#{RulesetForm.deleteRuleset}"
+                               action="#{RulesetForm.delete}"
                                title="#{msgs.delete}"
                                update="projectsTabView:rulesetTable">
                     <h:outputText><i class="fa fa-trash-o"/></h:outputText>
