--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/projects/workflowList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/projects/workflowList.xhtml
@@ -49,7 +49,7 @@
                         <f:param name="id" value="#{item.id}"/>
                     </h:link>
 
-                    <h:commandLink action="#{WorkflowForm.duplicateWorkflow(item.id)}" immediate="true"
+                    <h:commandLink action="#{WorkflowForm.duplicate(item.id)}" immediate="true"
                                    title="#{msgs.duplicateWorkflow}"><i class="fa fa-clone fa-lg"/></h:commandLink>
 
                     <p:commandLink id="deleteWorkflow" action="#{WorkflowForm.delete}"
